# byte_e2e_agent

./: .gitignore  README.md  backend-agent-解耦技术方案与任务清单.md  dock.html  lint.sh  space-station-slides.html  start-cli.sh  start.sh  后端Service架构与流程.md  后端架构与部署开工指南.md  整理后-验收任务清单.md  服务器部署与sandbox实验田方案.md  验收需求.md
backend/: .env.example  README.md  cli.py  main.py  project.py  pyproject.toml  requirements.txt  session_manager.py
backend/agent/: _json.py  _term.py  actions.py  config.py  interrupt.py  llm.py  llm_call.py  llm_streaming.py  metrics.py  paths.py  plan_manager.py  react.py  runtime.py  sandbox.py  scheduler.py  session.py  session_memory.py  shadow_repo.py  stream_channel.py  task_context.py  terminal.py  tool_execution.py  transcript.py  turn.py
backend/agent/core/: __init__.py  config.py  prompts.py  workspace.py
backend/agent/errors/: __init__.py  exceptions.py  repair.py
backend/agent/hook/: __init__.py  logging_hook.py  metrics_hook.py  notification_driver.py  notification_hook.py  permission_hook.py  persistence_hook.py  shadow_commit_hook.py  stream_driver.py  stream_hook.py
backend/agent/memory/: __init__.py  _side_client.py  memory_hook.py  store.py
backend/agent/persistence/: __init__.py  db.py  schema.py
backend/agent/runtime/: __init__.py  context_builder.py  driver.py  facade.py  guard.py  llm_context_builder.py  messages.py  pending.py  runtime.py  subagents.py  tooling.py  turn.py  turn_context_updates.py
backend/agent/session/: __init__.py  _data.py  entry.py  session.py  session_entry.py  status.py
backend/agent/skills/e2e-self-verification/: SKILL.md
backend/agent/tools/: __init__.py  _safety.py  ask_user.py  base.py  bash.py  browser.py  edit.py  finish.py  glob.py  grep.py  listdir.py  plan.py  pyrepl.py  read.py  registry.py  result.py  search.py  shell.py  skill.py  subagent.py  subtask.py  task.py  terminal.py  toolset.py  workspace.py  write.py
backend/agent/utils/: __init__.py  _json.py  _term.py  safety.py  sandbox.py  sysguard.py  sysguard_exec.py  terminal.py
backend/app/: dependencies.py
backend/app/api/: router.py  sse.py
backend/app/api/routes/: chat.py  (+7 more)
backend/app/core/: config.py  cors.py
backend/app/schemas/: chat.py  metrics.py  response.py  session.py  settings.py  skills.py  sysguard.py  tools.py  workspace.py
backend/app/services/: chat_service.py  checkpoint_service.py  context.py  errors.py  memory_service.py  metrics_service.py  project.py  session_scope.py  session_service.py  settings_service.py  workspace_context.py  workspace_registry.py  workspace_service.py
backend/shared/: __init__.py  hooks.py  types.py
backend/tests/: CAUTION.md  test_api.py  test_api_http.py  test_browser.py  test_bwrap_sandbox.py  test_chat_service.py  test_context_updates.py  test_defense_layers.py  test_error_repair.py  test_glob.py  test_grep.py  test_hook_system.py  test_integration.py  test_llm_context_repair.py  test_llm_streaming.py  test_memory.py  test_message.py  test_persistence.py  test_recover_readonly.py  test_repair.py  test_runtime_core.py  test_sandbox.py  test_session_workspace.py  test_shadow_repo.py  test_shell_interrupt.py  test_skill_overlay.py  test_stream_driver.py  test_tool_execution_parallel.py  test_tool_interrupt.py  test_tools.py  test_transcript_stream.py  test_workspace_policy.py  test_workspace_registry.py
backend/tmp/: migration.py  terminal.py  test_headed_browser.py
(+98 files in other folders)
