[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "serpapi>=0.1.0",
    "socksio>=1.0.0",
    "dulwich>=1.2.4",
    "playwright>=1.50.0",
    "landlock>=1.0.0.dev0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv.workspace]
members = [
    "double_pendulum_simulation",
]

[tool.pytest.ini_options]
markers = [
    "unit: fast unit tests without external dependencies",
    "integration: tests that require real LLM or shell",
]
