[project]
name = "byte-e2e-agent"
version = "0.1.0"
description = "ReAct agent with FastAPI backend — streaming LLM, tool execution, shadow git, long-term memory"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.34.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "serpapi>=0.1.0",
    "socksio>=1.0.0",
    "dulwich>=1.2.4",
    "playwright>=1.50.0",
    "landlock>=1.0.0.dev0",
    "langchain-core>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    "tmp",
    "__pycache__",
    ".venv",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B023",   # loop-bound closure (safe: called before next iteration)
    "B024",   # ABC without abstract method (intentional no-op base)
    "SIM102", # nested if (style preference)
    "SIM105", # try/pass vs contextlib.suppress (style preference)
    "SIM113", # manual counter vs enumerate (style preference)
    "SIM117", # nested with vs single with (style preference)
    "C408",   # dict() vs {} (style preference)
    "UP042",  # (str, Enum) vs StrEnum (Pydantic compat)
]

[tool.ruff.lint.isort]
known-first-party = ["agent", "app", "shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "unit: fast unit tests without external dependencies",
    "integration: tests that require real LLM or shell",
]
